# autoresearch-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: check.yml  ci.yml  publish.yml
src/autoresearch_lab/: __init__.py  cli.py  config.py  net.py  plot.py  template_loader.py
src/autoresearch_lab/harness/: backend.py  loader.py  results.py
src/autoresearch_lab/sandbox/: Dockerfile  orchestrator.py  stream_formatter.py
src/autoresearch_lab/templates/: AGENT.md  agent_prompt.txt  backend.py  lab.toml
tests/: test_cli.py  test_config.py
tests/harness/: test_loader.py  test_results.py
tests/sandbox/: test_orchestrator.py  test_run_session.py
